<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:padding="16dp"
        android:text="@string/file_actions_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/action_open"
        style="@style/FileActionText"
        android:text="@string/file_action_open" />

    <TextView
        android:id="@+id/action_download"
        style="@style/FileActionText"
        android:text="@string/file_action_download" />

    <TextView
        android:id="@+id/action_rename"
        style="@style/FileActionText"
        android:text="@string/file_action_rename" />

    <TextView
        android:id="@+id/action_copy"
        style="@style/FileActionText"
        android:text="@string/file_action_copy" />

    <TextView
        android:id="@+id/action_move"
        style="@style/FileActionText"
        android:text="@string/file_action_move" />

    <TextView
        android:id="@+id/action_archive"
        style="@style/FileActionText"
        android:text="@string/file_action_archive" />

    <TextView
        android:id="@+id/action_unarchive"
        style="@style/FileActionText"
        android:text="@string/file_action_unarchive" />

    <TextView
        android:id="@+id/action_delete"
        style="@style/FileActionText"
        android:text="@string/file_action_delete"
        android:textColor="?attr/colorError" />

</LinearLayout>
